# statemachine

./: Cargo.toml  README.md  config.yml  docker-compose.yml
config/src/: lib.rs
frontend/.cargo/: config.toml
nginx/: Dockerfile  editor.mjs  index.html  request.schema.json
service/: Cargo.toml
service/src/config/: mod.rs
service/src/telemetry/: mod.rs
src/: handlers.rs  main.rs
src/config/: mod.rs  serde_stuff.rs
src/telemetry/: mod.rs
statemachine/: Cargo.toml
statemachine/.cargo/: config.toml
statemachine/src/: main.rs
statemachine_grpc/: Cargo.toml  build.rs
statemachine_grpc/protos/: hello.proto
statemachine_grpc/src/: lib.rs
telemetry/: Cargo.toml
telemetry/src/: lib.rs
web_api/: Cargo.toml
web_api/.cargo/: config.toml
web_api/src/: handlers.rs  holdings.rs  main.rs
web_ui/: Cargo.toml
web_ui/.cargo/: config.toml
web_ui/src/: main.rs
web_ui/static/: editor.bundle.js  index.html
