[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
service = { path = "../service" }
log = "0.4.20"

actix-web = "4.4.0"
actix-web-opentelemetry = { version = "0.15.0", features = ["awc"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix-files = "0.6.2"
awc = "3.2.0"
url = "2.4.1"
