[package]
name = "web_ui"
version = "0.1.0"
edition = "2021"

[dependencies]
telemetry = { path = "../telemetry" }

log = "0.4.20"

actix-web = "4.4.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
actix-files = "0.6.2"
awc = "3.2.0"
url = "2.4.1"
tracing = "0.1.37"
tracing-awc = "0.1.8"
tracing-actix-web = "0.7.8"
